- Connect DI Hilt - Add models our response - Connect Retrofit - Create interface for Api

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "Movies App Compose MVVM"
 include ':app'
 include ':utils'
+include ':data'
+include ':domain'
