--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,17 @@ buildscript {
         kotlin_version = '1.6.10'
         compose_version = '1.1.1'
         nav_version = "2.4.2"
+        retrofit_version = "2.9.0"
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.40.5"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.3' apply false
     id 'com.android.library' version '7.1.3' apply false
-    id 'org.jetbrains.kotlin.android' version "$kotlin_version" apply false
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
+    id 'org.jetbrains.kotlin.android' version "${kotlin_version}" apply false
+    id 'org.jetbrains.kotlin.jvm' version "${kotlin_version}" apply false
 }
 
 task clean(type: Delete) {
